# lets-go

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  lab-experiment-tracking-system.md  lab-experiment-tracking-system.txt  pyproject.toml
alembic/: env.py
alembic/versions/: 3278c7aa635e_add_experiment_samples.py  373b42ea399c_add_researcher_table_and_role_enum.py  50e553999104_replace_single_column_index_on_.py  922df8d00757_add_sample_table.py  98559e20c786_add_project_researchers.py  a6d6fbd3bbe9_add_project_table_and_status_enum.py  d969c6ea8896_add_experiment_table.py  f6bf29205893_add_measurement_table.py
docs/: future-enhancements.md  schema.md
docs/superpowers/plans/: 2026-05-12-core-infra.md  2026-05-12-schema.md  2026-05-13-load-test.md
docs/superpowers/specs/: 2026-05-12-core-infra-design.md  2026-05-12-schema-design.md  2026-05-13-load-test-design.md
scripts/: load_test.py
src/lab/: config.py  db.py  seed.py
src/lab/models/: __init__.py  experiment.py  experiment_sample.py  measurement.py  project.py  project_researcher.py  researcher.py  sample.py
tests/: conftest.py  test_alembic.py  test_canary.py  test_config.py  test_conftest.py  test_db.py  test_experiment.py  test_experiment_sample.py  test_measurement.py  test_models.py  test_project.py  test_project_researcher.py  test_queries.py  test_researcher.py  test_sample.py  test_seed.py  test_seed_scenarios.py
tests/factories/: __init__.py  _base.py  experiment.py  measurement.py  project.py  project_researcher.py  researcher.py  sample.py
